--- a/flutter_roles_user_app/pubspec.yaml
+++ b/flutter_roles_user_app/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   http: ^0.12.0
   equatable: ^1.0.0
   flutter_bloc: ^2.0.0
+  pull_to_refresh: 1.6.3
+  shimmer: ^1.0.0
+  flutter_html: ^0.10.4
 
 dev_dependencies:
   flutter_test:
